# ecomm-prod-assistant

./: pyproject.toml  requirements.txt  scrapper_ui.py
notebook/: test.ipynb
